opam-version: "2.0"
synopsis: "OCaml bindings for the Xen hypervisor"
maintainer: "lindig@gmail.com"
authors: "lindig@gmail.com"
license: "LGPL"
homepage: "https://github.com/lindig/xen-ocaml-tools"
bug-reports: "https://github.com/lindig/xen-ocaml-tools/issues"
depends: [
  "ocaml"
  "dune" {build}
  "base-unix"
]
build: ["dune" "build" "-p" name "-j" jobs]
depexts: ["m4" "libxen-dev" "libsystemd-dev"] {os-distribution = "debian"}
dev-repo: "git+https://github.com/lindig/xen-ocaml-tools.git"
