opam-version: "2.0"
maintainer: "lindig@gmail.com"
authors: "lindig@gmail.com"
homepage: "https://github.com/lindig/xen-ocaml-tools"
bug-reports: "https://github.com/lindig/xen-ocaml-tools/issues"
depends: [
  "ocaml"
  "dune" {build}
  "base-unix"
  "xen"
]
build: ["dune" "build" "-p" name]
depexts: ["m4" "libxen-dev" "libsystemd-dev"] {os-distribution = "debian"}
dev-repo: "git+https://github.com/lindig/xen-ocaml-tools.git"
